fixed toggle position on mobile, modal on map

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@ body {
   background-color: black;
   font-family: 'Titillium Web', sans-serif;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
