--- a/src/components/MapPageComponents/styles/map.css
+++ b/src/components/MapPageComponents/styles/map.css
@@ -8,5 +8,6 @@
     .mapContainer{
         width: 98vw;
         height: 50vh;
+        float: left;
     }
 }
