--- a/src/components/layout/layoutStyles/Header.css
+++ b/src/components/layout/layoutStyles/Header.css
@@ -15,6 +15,7 @@
 @media only screen and (max-width: 800px) {
   .headerLink, .currentPage {
     width: 20%;
+    font-size: 17px;
   }
 }
 
